Fix touch event flag may not be updated correctly by transform which causes no layout

BUG=673102
TEST=third_party/WebKit/LayoutTests/fast/events/touch/compositor-touch-hit-rects-geometry-change-as-touch-notified-by-nolayout.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2600593002
Cr-Commit-Position: refs/heads/master@{#443580}